--- a/assignments/cnn.ipynb
+++ b/assignments/cnn.ipynb
@@ -15,9 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,15 +141,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3376: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\ops\\nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "Found 144000 images belonging to 2 classes.\n",
+      "Found 16000 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "# get the model\n",
     "model = get_model()\n",
     "\n",
     "# get the data generators\n",
-    "train_gen, val_gen = get_pcam_generators('/change/me/to/dataset/path')"
+    "train_gen, val_gen = get_pcam_generators('C:/Users/max/stack/TUE/Sync_laptop/Imaging project/.data')"
    ]
   },
   {
@@ -153,9 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(None, 96, 96, 32)\n",
+      "(None, 24, 24, 32)\n",
+      "(None, 24, 24, 64)\n",
+      "(None, 6, 6, 64)\n",
+      "(None, 2304)\n",
+      "(None, 64)\n",
+      "(None, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "for layer in model.layers:\n",
     "    print(layer.output_shape)"
@@ -172,9 +218,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:973: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:2741: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:174: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:181: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:190: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:199: The name tf.is_variable_initialized is deprecated. Please use tf.compat.v1.is_variable_initialized instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:206: The name tf.variables_initializer is deprecated. Please use tf.compat.v1.variables_initializer instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\callbacks.py:850: The name tf.summary.merge_all is deprecated. Please use tf.compat.v1.summary.merge_all instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\callbacks.py:853: The name tf.summary.FileWriter is deprecated. Please use tf.compat.v1.summary.FileWriter instead.\n",
+      "\n",
+      "Epoch 1/3\n",
+      "4500/4500 [==============================] - 160s 36ms/step - loss: 0.4663 - acc: 0.7797 - val_loss: 0.3998 - val_acc: 0.8197\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.39984, saving model to my_first_cnn_model_weights.hdf5\n",
+      "WARNING:tensorflow:From C:\\Users\\max\\Anaconda3\\lib\\site-packages\\keras\\callbacks.py:995: The name tf.Summary is deprecated. Please use tf.compat.v1.Summary instead.\n",
+      "\n",
+      "Epoch 2/3\n",
+      "4500/4500 [==============================] - 156s 35ms/step - loss: 0.3953 - acc: 0.8226 - val_loss: 0.3804 - val_acc: 0.8287\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.39984 to 0.38043, saving model to my_first_cnn_model_weights.hdf5\n",
+      "Epoch 3/3\n",
+      "4500/4500 [==============================] - 154s 34ms/step - loss: 0.3672 - acc: 0.8379 - val_loss: 0.3638 - val_acc: 0.8427\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.38043 to 0.36384, saving model to my_first_cnn_model_weights.hdf5\n"
+     ]
+    }
+   ],
    "source": [
     "# save the model and weights\n",
     "model_name = 'my_first_cnn_model'\n",
@@ -256,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
